<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="244dp"
        android:layout_height="53dp"
        android:text="@string/takeaphoto"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="244dp"
        android:layout_height="53dp"
        android:text="@string/setPhoto"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhoto" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="246dp"
        android:layout_height="104dp"
        android:layout_marginTop="36dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="356dp"
        android:layout_height="329dp"
        android:contentDescription="@string/photoresult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/divider_horizontal_bright"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/sendData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getOCR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <ProgressBar
        android:id="@+id/loadingPB"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chiplang"
        android:layout_width="151dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/sendData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chiprus"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="РУС"
            app:chipMinTouchTargetSize="48dp"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipeng"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="АНГЛ"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>